maybe fixed overflow issues now?

--- a/app/assets/stylesheets/cart.css
+++ b/app/assets/stylesheets/cart.css
@@ -3,6 +3,7 @@
 }
 
 #cart-sidebar {
+    display: none;
     transition: transform 0.2s;    
     z-index: 100;
     backdrop-filter: blur(8px);
